Updated api-spec.yaml, import.yaml, server.js, authMidleware.js & reset.js
